[gd_scene load_steps=6 format=3 uid="uid://cbfw7b8fntg6q"]

[ext_resource type="PackedScene" uid="uid://6i2dxefjcety" path="res://addons/reaction/components/ReactionUIListObjectFormItem.tscn" id="1_1kf0c"]
[ext_resource type="Script" uid="uid://c18f8eqw26egu" path="res://addons/reaction/components/ReactionUICriteria.gd" id="2_hpqvs"]
[ext_resource type="PackedScene" uid="uid://doabmy6rit131" path="res://addons/reaction/components/ReactionUISearchMenu.tscn" id="3_bn02u"]

[sub_resource type="Image" id="Image_dasse"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 93, 93, 255, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 231, 255, 90, 90, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 90, 90, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 42, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 42, 255, 93, 93, 233, 255, 92, 92, 232, 255, 93, 93, 41, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 42, 255, 93, 93, 233, 255, 92, 92, 232, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 45, 255, 93, 93, 44, 0, 0, 0, 0, 255, 91, 91, 42, 255, 91, 91, 42, 0, 0, 0, 0, 255, 91, 91, 45, 255, 93, 93, 44, 0, 0, 0, 0, 255, 91, 91, 42, 255, 91, 91, 42, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 45, 255, 92, 92, 235, 255, 92, 92, 234, 255, 89, 89, 43, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 45, 255, 92, 92, 235, 255, 92, 92, 234, 255, 89, 89, 43, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 92, 92, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 91, 91, 59, 255, 92, 92, 61, 255, 92, 92, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 91, 91, 59, 255, 92, 92, 61, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_5ghi2"]
image = SubResource("Image_dasse")

[node name="ReactionUICriteria" instance=ExtResource("1_1kf0c")]
script = ExtResource("2_hpqvs")
object_name = "criteria"
remove_object_function_name = "remove_criteria_by_index"

[node name="LabelContainer" type="VBoxContainer" parent="Columns" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="Columns/LabelContainer" index="0"]
layout_mode = 2
text = "Label:
"

[node name="LabelLineEdit" type="LineEdit" parent="Columns/LabelContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="FactContainer" type="VBoxContainer" parent="Columns" index="2"]
unique_name_in_owner = true
layout_mode = 2

[node name="FactLabel" type="Label" parent="Columns/FactContainer" index="0"]
layout_mode = 2
text = "Fact:"

[node name="FactsSearchMenu" parent="Columns/FactContainer" index="1" instance=ExtResource("3_bn02u")]
unique_name_in_owner = true
layout_mode = 2

[node name="FactsFunctionButton" type="Button" parent="Columns" index="3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Facts Function"

[node name="OperationContainer" type="VBoxContainer" parent="Columns" index="4"]
layout_mode = 2

[node name="OperationLabel" type="Label" parent="Columns/OperationContainer" index="0"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Opt:"

[node name="OperationMenuButton" type="MenuButton" parent="Columns/OperationContainer" index="1"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "a<=x<=b"
item_count = 4
popup/item_0/text = "="
popup/item_0/id = 0
popup/item_1/text = "<"
popup/item_1/id = 1
popup/item_2/text = ">"
popup/item_2/id = 2
popup/item_3/text = "a<=x<=b"
popup/item_3/id = 3

[node name="ValueContainer" type="VBoxContainer" parent="Columns" index="5"]
layout_mode = 2

[node name="ValueLabel" type="Label" parent="Columns/ValueContainer" index="0"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Value:"

[node name="ValueALineEdit" type="LineEdit" parent="Columns/ValueContainer" index="1"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="ValueSpinBox" type="SpinBox" parent="Columns/ValueContainer" index="2"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="EnumValuesMenuButton" type="MenuButton" parent="Columns/ValueContainer" index="3"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="BooleanValueCheckBox" type="CheckBox" parent="Columns/ValueContainer" index="4"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ValueBContainer" type="VBoxContainer" parent="Columns" index="6"]
layout_mode = 2

[node name="ValueBLabel" type="Label" parent="Columns/ValueBContainer" index="0"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Value B:"

[node name="ValueBSpinBox" type="SpinBox" parent="Columns/ValueBContainer" index="1"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="NegateCheckButton" type="CheckButton" parent="Columns" index="7"]
unique_name_in_owner = true
layout_mode = 2
text = "Negate"

[node name="RemoveObjectButton" parent="Columns" index="8"]
tooltip_text = "Remove criteria"
icon = SubResource("ImageTexture_5ghi2")

[node name="WarningAcceptDialog" type="AcceptDialog" parent="." index="1"]
unique_name_in_owner = true

[node name="FactsFunctionConfirmationDialog" type="ConfirmationDialog" parent="." index="2"]
unique_name_in_owner = true
title = "Facts Functions"
size = Vector2i(500, 500)

[node name="MarginContainer" type="MarginContainer" parent="FactsFunctionConfirmationDialog" index="3"]
offset_left = 8.0
offset_top = 8.0
offset_right = 315.0
offset_bottom = 451.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColumnsContainer" type="HBoxContainer" parent="FactsFunctionConfirmationDialog/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="FunctionFactsContainer" type="VBoxContainer" parent="FactsFunctionConfirmationDialog/MarginContainer/ColumnsContainer" index="0"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="FactsFunctionConfirmationDialog/MarginContainer/ColumnsContainer/FunctionFactsContainer" index="0"]
layout_mode = 2
text = "Operations:
"

[connection signal="text_submitted" from="Columns/LabelContainer/LabelLineEdit" to="." method="_on_label_line_edit_text_submitted"]
[connection signal="item_selected" from="Columns/FactContainer/FactsSearchMenu" to="." method="_on_facts_search_menu_item_selected"]
[connection signal="pressed" from="Columns/FactsFunctionButton" to="." method="_on_facts_function_button_pressed"]
[connection signal="text_submitted" from="Columns/ValueContainer/ValueALineEdit" to="." method="_on_value_a_line_edit_text_submitted"]
[connection signal="toggled" from="Columns/ValueContainer/BooleanValueCheckBox" to="." method="_on_boolean_value_check_box_toggled"]
[connection signal="toggled" from="Columns/NegateCheckButton" to="." method="_on_negate_check_button_toggled"]
